opam-version: "2.0"
name: "chamelon-unix"
maintainer: [ "yomimono <maintenance@identity-function.com>" ]
authors: [ "yomimono <maintenance@identity-function.com>" ]
homepage: "https://github.com/yomimono/chamelon"
bug-reports: "https://github.com/yomimono/chamelon/issues"
dev-repo: "git+https://github.com/yomimono/chamelon.git"
license: "ISC"
synopsis: "Command-line Unix utilities for chamelon filesystems"

build: [
 [ "dune" "build" "-p" name "-j" jobs ]
 [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.0.0"}
  "bos"
  "chamelon"
  "cmdliner" {>= "1.1.0"}
  "fmt"
  "logs"
  "lwt"
  "mirage-block" {>= "3.0.0"}
  "mirage-block-unix"
  "mirage-clock"
  "mirage-clock-unix"
  "mirage-kv"
  "mirage-logs"
]
