opam-version: "2.0"
maintainer: [ "yomimono <maintenance@identity-function.com>" ]
authors: [ "yomimono <maintenance@identity-function.com>" ]
homepage: "https://github.com/yomimono/chamelon"
bug-reports: "https://github.com/yomimono/chamelon/issues"
dev-repo: "git+https://github.com/yomimono/chamelon.git"
license: "ISC"
synopsis: "Command-line Unix utilities for chamelon filesystems"

build: [
 [ "dune" "build" "-p" name "-j" jobs ]
 [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.9.0"}
  "alcotest" {>= "1.5.0" & with-test}
  "alcotest-lwt" {>= "1.5.0" & with-test}
  "mirage-block-combinators" {>= "3.0.0" & with-test}
  "mirage-crypto-rng" {>= "0.10.6" & with-test}
  "bos" {>= "0.2.0"}
  "chamelon" {= version}
  "cmdliner" {>= "1.1.0"}
  "fmt" {>= "0.8.7"}
  "logs" {>= "0.6.0"}
  "lwt" {>= "5.3.0"}
  "mirage-block" {>= "3.0.0"}
  "mirage-block-unix" {>= "2.13.0"}
  "mirage-clock" {>= "2.0.0"}
  "mirage-clock-unix" {>= "4.0.0"}
  "mirage-kv" {>= "5.0.0"}
  "mirage-logs" {>= "1.2.0"}
]
