opam-version: "2.0"
name: "chamelon"
maintainer: [ "yomimono <maintenance@identity-function.com>" ]
authors: [ "yomimono <maintenance@identity-function.com>" ]
homepage: "https://github.com/yomimono/chamelon"
bug-reports: "https://github.com/yomimono/chamelon/issues"
dev-repo: "git+https://github.com/yomimono/chamelon.git"
license: "ISC"
synopsis: "Subset of littlefs filesystem fulfilling MirageOS KV"
description: """
Chamelon implements a subset of the littlefs filesystem,
which was originally designed for microcontroller use.  It exposes
an interface matching the Mirage_kv.RW module type and operates
on top of a block device matching Mirage_block.S .

It is extremely not POSIX."""

build: [
 [ "dune" "build" "-p" name "-j" jobs ]
 [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.0.0"}
  "alcotest" {with-test}
  "mirage-block-unix" {with-test}
  "bechamel" {with-test}
  "bechamel-js" {with-test}
  "checkseum"
  "digestif"
  "fmt"
  "logs"
  "lwt"
  "mirage-block" {>= "3.0.0"}
  "mirage-clock"
  "mirage-kv" {>= "4.0.1"}
  "mirage-logs"
  "optint"
]
