(executable
  (name read)
  (modules read)
  (libraries mirage-block-combinators mirage-block-unix mirage-kv logs.cli logs.fmt lwt chamelon.kv fpath bechamel bechamel-js)
)

(rule
  (targets read.json)
  (action (with-stdout-to %{targets}
            (run %{exe:read.exe})
            )))

(rule
 (targets read.html)
 (mode promote)
 (action
  (system "%{bin:bechamel-html} < %{dep:read.json} > %{targets}")))
