(executable
  (name fuzz)
  (libraries chamelon.kv crowbar cstruct lwt lwt.unix mirage-block-combinators mirage-clock-unix)
)

(rule
  (alias runtest)
  (action
    (progn
      (run mkdir input output)
      (run dd if=/dev/zero of=input/zero bs=512 count=32)
      (run format -b 512 input/zero)
      (run afl-fuzz -i input -o output ./%{exe:fuzz.exe} -- @@)
    )))
