(executable
  (name fuzz)
  (libraries chamelon.kv crowbar cstruct lwt lwt.unix mirage-block-combinators mirage-clock-unix)
)

(rule
  (alias readwrite)
  (action
    (progn
      (run mkdir input output)
      (run dd if=/dev/zero of=input/zero bs=512 count=32)
      (run chamelon format input/zero 512)
      (run afl-fuzz -i input -o output ./%{exe:fuzz.exe} -- @@)
    )))
