(executables
  (names test_mirage test_dirs)
  (libraries mirage-block-unix mirage-clock-unix mirage-crypto-rng mirage-crypto-rng.lwt mirage-kv logs.cli logs.fmt lwt chamelon.kv fpath alcotest alcotest-lwt)
)

(rule
  (alias runtest)
  (action (progn
            (run dd if=/dev/zero of=emptyfile bs=4K count=10)
            (run %{exe:test_mirage.exe})
            (run dd if=/dev/zero of=emptyfile bs=1M count=10)
            (run %{exe:test_dirs.exe})
            )))
