(executables
  (names mem_test_read test_cycles test_dirs test_mirage)
  (libraries mirage-block-combinators mirage-block-unix mirage-clock-unix mirage-crypto-rng mirage-crypto-rng.unix mirage-kv logs.cli logs.fmt lwt chamelon chamelon.kv fpath alcotest alcotest-lwt)
)

(rule
  (alias regress)
  (action (progn
            (run dd if=/dev/zero of=emptyfile bs=4K count=10)
            (run %{exe:test_mirage.exe} test good_block)
            (run cp emptyfile before_bad_write.img)
            (with-stdout-to before_bad_write.txt (run %{exe:../src/chamelon.exe} parse before_bad_write.img 512 ))
            (run dd if=/dev/zero of=emptyfile bs=4K count=10)
            (run %{exe:test_mirage.exe} test regressions)
            (run cp emptyfile after_bad_write.img)
            (with-stdout-to after_bad_write.txt (run %{exe:../src/chamelon.exe} parse after_bad_write.img 512 ))
            (run kdiff3 before_bad_write.txt after_bad_write.txt)
            )))

(rule
  (alias runtest)
  (action (progn
            (run dd if=/dev/zero of=emptyfile bs=4K count=10)
            (run fallocate -l 64M 64mbfile)
            (run %{exe:test_mirage.exe})
            (run dd if=/dev/zero of=emptyfile bs=1M count=10)
            (run %{exe:test_dirs.exe})
            (run %{exe:test_cycles.exe})
            (run %{exe:mem_test_read.exe})
            )))
